css fixes in mobile

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "W Diseño Web",
-  "name": "W Diseño Web",
+  "short_name": "Walter Burgers",
+  "name": "Walter Burgers",
   "icons": [
     {
       "src": "logo.svg",
